<resources>
    <string name="app_name">demo</string>
    <string name="main_pie_chart">Pie Chart</string>
    <string name="main_scan_qrcode">Scan QR code</string>
    <string name="main_scan_beacons">Scan Beacon</string>
    <string name="main_scrolling">Scrolling</string>
    <string name="main_list_popup">List Popup</string>
    <string name="main_image_upload_and_download">Icon Upload And Download</string>
    <string name="main_ble">BLE</string>
    <string name="main_webserver">WebServer</string>
    <string name="main_wifi">Wi-Fi</string>
    <string name="main_udp_broad_cast">UDP Broadcast</string>

    <!--zxing-->
    <string name="qrcode_scan">Scanner</string>
    <string name="qrcode_open_flashlight">Flash on</string>
    <string name="qrcode_close_flashlight">Flash off</string>
    <string name="qrcode_album">Album</string>
    <string name="qrcode_msg_camera_framework_bug">Camera is occupied or no camera permissions. Please check.</string>
    <string name="qrcode_button_ok">Quit</string>
    <string name="qrcode_viewfinderview_status_text1">Put 2D code / bar code in the viewfinder.</string>
    <string name="qrcode_viewfinderview_status_text2">Automatic scanning</string>
    <string name="qrcode_parsing_failed">Sorry, parsing failed, try another picture.</string>

    <!--Sign in-->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
