<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_options_scrolling"
        android:icon="@drawable/ic_list_24dp"
        android:title="@string/main_scrolling" />

    <item
        android:id="@+id/main_options_list_popup"
        android:icon="@drawable/ic_list_24dp"
        android:title="@string/main_list_popup" />

    <item
    android:id="@+id/main_options_image_upload_and_download"
    android:icon="@drawable/ic_image_24dp"
    android:title="@string/main_image_upload_and_download" />

    <item
        android:id="@+id/main_options_ble"
        android:icon="@drawable/ic_ble_24dp"
        android:title="@string/main_ble" />

    <item
        android:id="@+id/main_webserver"
        android:icon="@drawable/ic_web_24dp"
        android:title="@string/main_webserver" />

    <item
        android:id="@+id/main_wifi"
        android:icon="@drawable/ic_wifi_24dp"
        android:title="@string/main_wifi" />

    <item
        android:id="@+id/main_wifi_direct_server"
        android:icon="@drawable/ic_wifi_24dp"
        android:title="Wi-Fi Direct Server" />

    <item
        android:id="@+id/main_wifi_direct_client"
        android:icon="@drawable/ic_wifi_24dp"
        android:title="Wi-Fi Direct Client" />

    <item
        android:id="@+id/main_udp_broad_cast"
        android:icon="@drawable/ic_wifi_24dp"
        android:title="@string/main_udp_broad_cast" />
</menu>