<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ycm.zxinglibrary.android.CaptureActivity">

    <SurfaceView
        android:id="@+id/qrcode_preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:background="#99000000">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/qrcode_backIv"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:padding="6dp"
                app:srcCompat="@drawable/qrcode_ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/qrcode_scan"
                android:textColor="#ffffff"
                android:textSize="20sp" />


        </RelativeLayout>


        <com.ycm.zxinglibrary.view.ViewfinderView
            android:id="@+id/qrcode_viewfinder_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/qrcode_bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_gravity="bottom"
            android:background="#99000000"
            android:orientation="horizontal">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/qrcode_flashLightLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/qrcode_flashLightIv"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/qrcode_ic_close" />

                <TextView
                    android:id="@+id/qrcode_flashLightTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/qrcode_open_flashlight"
                    android:textColor="#ffffff" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/qrcode_albumLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/qrcode_albumIv"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:tint="#ffffffff"
                    app:srcCompat="@drawable/qrcode_ic_photo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/qrcode_album"
                    android:textColor="#ffffff" />
            </android.support.v7.widget.LinearLayoutCompat>


        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>